Fixed jump jank & jittery movement, added lowjumps and made site a bit nicer-looking.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
-#image {
+.bg {
 	position: fixed;
-	background-color: black;
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	z-index: -1;
 }
 html, body {
 	width: 100%;
